$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.139 2005/05/17 15:00:04 ph10 Exp $

Change log file for Exim from version 4.21
-------------------------------------------


Exim version 4.52
-----------------

TF/01 Added support for Client SMTP Authorization. See NewStuff for details.

PH/01 When a transport filter timed out in a pipe delivery, and the pipe
      command itself ended in error, the underlying message about the transport
      filter timeout was being overwritten with the pipe command error. Now the
      underlying error message should be appended to the second error message.

TK/01 Fix poll() being unavailable on Mac OSX 10.2.

PH/02 Reduce the amount of output that "make" produces by default. Full output
      can still be requested.

PH/03 The warning log line about a condition test deferring for a "warn" verb
      was being output only once per connection, rather than after each
      occurrence (because it was using the same function as for successful
      "warn" verbs). This seems wrong, so I have changed it.

TF/02 Two buglets in acl.c which caused Exim to read a few bytes of memory that
      it should not have, which might have caused a crash in the right
      circumstances, but probably never did.

PH/04 Installed a modified version of Tony Finch's patch to make submission
      mode fix the return path as well as the Sender: header line, and to
      add a /name= option so that you can make the user's friendly name appear
      in the header line.


Exim version 4.51
-----------------

TK/01 Added Yahoo DomainKeys support via libdomainkeys. See
      doc/experimental-spec.txt for details. (http://domainkeys.sf.net)

TK/02 Fix ACL "control" statement not being available in MIME ACL.

TK/03 Fix ACL "regex" condition not being available in MIME ACL.

PH/01 Installed a patch from the Sieve maintainer that allows -bf to be used
      to test Sieve filters that use "vacation".
